# Garbled-Computation-2.0

./: CMakeLists.txt  D.txt  D_A.txt  D_B.txt  DebugTranslate_A.txt  DebugTranslate_B.txt  Debug_A.txt  Debug_B.txt  P.txt  P_A.txt  P_B.txt  Permutations_DA.txt  Permutations_DB.txt  Permutations_PA.txt  Permutations_PB.txt  Pi_diff_R_DA_DB.txt  Pi_diff_R_DB_DA.txt  README.md  R_DA.txt  R_DB.txt  R_PA.txt  R_PB.txt  Subble Program.txt  TestOutput.txt  Test_P_A.txt  Test_P_B.txt  U_DA.txt  U_DB.txt  U_PA.txt  U_PB.txt  a.out  alice  alice.cpp  alice.h  bob  bob.cpp  bob.h  client.cpp  dataelement.h  helper  (+7 more)
Experiments/: Results (version 1).xlsb.xlsx  Results.xlsx  table 1.csv  ~$Results (version 1).xlsb.xlsx
Experiments/Circuit/: D.txt  Fault_Tree_Subble_Program.txt
Experiments/Linear/: D_1.txt  D_10.txt  D_1_A.txt  D_1_B.txt  D_2.txt  D_3.txt  D_4.txt  D_5.txt  D_6.txt  D_7.txt  D_8.txt  D_9.txt  P_A.txt  P_B.txt  Test_D.txt  Test_P.txt
debug/alice/: DebugTranslate_A.txt  Debug_A.txt
debug/bob/: DebugTranslate_B.txt  Debug_B.txt
include/: client.h  helper.h  instruction.h  party.h  preprocessor.h
inputs/alice/: D_A.txt  D_A_1.txt  P_A.txt  P_A_1.txt  Test_D_A.txt  Test_P_A.txt
inputs/bob/: D_B.txt  D_B_1.txt  P_B.txt  P_B_1.txt  Test_D_B.txt  Test_P_B.txt
randoms/alice/: AlphaRandoms_A.txt  Permutations_DA.txt  Permutations_PA.txt  Pi_diff_R_DB_DA.txt  Pi_diff_R_PB_PA.txt  R_DA.txt  R_PA.txt  (+3 more)
src/: alice.cpp  alice_main.cpp  bob.cpp  bob_main.cpp  client.cpp  helper.cpp  helper_main.cpp  main.cpp  preprocessor.cpp  preprocessor_main.cpp  server.cpp
(+10 files in other folders)
